test/invalid/baseline/record-key.txt
Syntax error at line 2 in record-key.webidl, since `interface Foo`:
  void foo(record<octet, any> param
                  ^ Record key must be one of: ByteString, DOMString, USVString
